@@ -1,3 +1,10 @@
+ FLa4a 1.7.x:
+
+ NEW FEATURES
+- pearson and raw residuals
+
+ BUG FIXES:
+
  FLa4a 1.6.x:
 
  NEW FEATURES
